--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -157,8 +157,7 @@
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
                 <h2 class="font-size-11 mb-5">About the camp</h2>
                 <p class="font-size-7 mb-0">
-                  Our focus is always on finding the best people to work with. Our bar is high, but you look ready to take on the
-                  challenge.
+                  We aspire to provide an engaging and interactive experience for motivated students who are interested in pursuing a STEM career. <br />We are very excited to welcome you to our in-person camp this summer!
                 </p>
               </div>
             </div>
@@ -201,7 +200,7 @@
         <div class="row justify-content-center">
           <div class="col-xl-5 col-lg-6 col-sm-9">
             <div class="text-center mb-13 mb-lg-16" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
-              <h2 class="font-size-10 mb-0 letter-spacing-n83">Change the game through design</h2>
+              <h2 class="font-size-10 mb-0 letter-spacing-n83">About the Camp</h2>
             </div>
           </div>
         </div>
@@ -236,15 +235,11 @@
           <div class="col-xl-6 col-lg-7 col-md-7 col-xs-10">
             <div class="mx-lg-14 mx-xl-14" data-aos="fade-left" data-aos-duration="600" data-aos-once="true">
               <p class="heading-default-color font-size-6 mb-4 mb-lg-9">
-                iGEM, short for International Genetically Engineered Machine, is a synthetic biology competition for high
-                schoolers, undergraduates, graduate students, and entrepreneurs, in which teams develop SynBio solutions to
-                problems in today’s society. Students work to display their leadership, interest in the community, inclusivity,
-                and entrepreneurship.
+                This is the fifth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school students who are interested in pursuing a STEM career in the future, or want to explore different possible career options. We are very excited for this year’s iGEM camp because it’s the first in-person camp in two years. The past two had been online because of the pandemic. 
               </p>
               <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                We focus a lot on our education, running the camp and writing a book about Biochemistry that we published to
-                Amazon, and last year, we won the Best Education award among all high school teams globally. We also received a
-                gold medal and were among the top 10 high school teams internationally.
+                Our camp will teach many different important science topics such as biology, synthetic biology, chemistry, and forensics, as well as have daily labs that will reinforce what the students learned. The content we teach will not only prepare students for high school-level courses such as biology and chemistry, but it will also help their application should they wish to be a part of CCA’s iGEM team. 
+
               </p>
             </div>
           </div>
