--- a/views/about.html
+++ b/views/about.html
@@ -149,7 +149,7 @@
         <div class="bg-shape-14"></div>
       </div>
       <div class="py-4"></div> -->
-      <div class="pt-24 pt-md-26 pt-lg-30">
+      <div class="pt-24 pt-md-26 pt-lg-30 pb-12 pb-md-16 pb-lg-24">
         <div class="container">
           <!-- Section Padding -->
           <div class="row justify-content-center">
@@ -165,37 +165,19 @@
           </div>
           <!-- End Section Padding -->
         </div>
-      </div>
-    </div>
-    <!-- >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-                Masonary Area 
-    <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<-->
-    <div class="pb-12 pb-md-16 pb-lg-24">
-      <div class="masonary-gallery-wrapper">
-        <div class="big-image">
-          <div class="single-image" data-aos="zoom-in" data-aos-duration="100" data-aos-once="true">
-            <span style="background-image: url(/image/masonry/unknown.png)"></span>
-          </div>
-        </div>
-        <div class="small-images">
-          <div class="single-image" data-aos="zoom-in" data-aos-duration="300" data-aos-once="true">
-            <span style="background-image: url(/image/masonry/unknown-2.png)"></span>
-          </div>
-          <div class="single-image" data-aos="zoom-in" data-aos-duration="600" data-aos-once="true">
-            <span style="background-image: url(/image/masonry/unknown-3.png)"></span>
-          </div>
-          <div class="single-image" data-aos="zoom-in" data-aos-duration="900" data-aos-once="true">
-            <span style="background-image: url(/image/masonry/unknown-4.png)"></span>
-          </div>
-          <div class="single-image" data-aos="zoom-in" data-aos-duration="1200" data-aos-once="true">
-            <span style="background-image: url(/image/masonry/unknown-5.png)"></span>
-          </div>
-          <div class="single-image" data-aos="zoom-in" data-aos-duration="1500" data-aos-once="true">
-            <span style="background-image: url(/image/masonry/unknown-6.png)"></span>
+
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <div class="rounded-8" data-aos="fade-up" data-aos-duration="800" data-aos-once="true">
+                <img class="w-100" src="/image/l4/career-banner-img.jpg" alt="" />
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
     <div class="pb-11 pb-md-15 pb-lg-27">
       <div class="container">
         <div class="row justify-content-center">
