--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -155,9 +155,9 @@
           <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8 col-md-11">
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
-                <h2 class="font-size-11 mb-5">About the camp</h2>
+                <h2 class="font-size-11 mb-5">About iGEM Camp</h2>
                 <p class="font-size-7 mb-0">
-                  We aspire to provide an engaging and interactive experience for motivated students who are interested in pursuing a STEM career. <br />We are very excited to welcome you to our in-person camp this summer!
+                  We aspire to provide an engaging and interactive experience for motivated students who are interested in pursuing a STEM career. We are very excited to welcome you to our in-person camp this summer!
                 </p>
               </div>
             </div>
