--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -238,7 +238,7 @@
                 This is the fifth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school students who are interested in pursuing a STEM career in the future, or want to explore different possible career options. We are very excited for this year’s iGEM camp because it’s the first in-person camp in two years. The past two had been online because of the pandemic. 
               </p>
               <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                Our camp will teach many different important science topics such as biology, synthetic biology, chemistry, and forensics, as well as have daily labs that will reinforce what the students learned. The content we teach will not only prepare students for high school-level courses such as biology and chemistry, but it will also help their application should they wish to be a part of CCA’s iGEM team. 
+                Our camp will teach many different important science topics such as biology, synthetic biology, chemistry, and forensics, as well as have daily labs that will reinforce what the students learned. The content we teach will not only prepare students for high school-level courses such as biology and chemistry, but it will also help their application should they wish to be a part of CCA’s iGEM team in high school. 
 
               </p>
             </div>
