--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -157,7 +157,8 @@
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
                 <h2 class="font-size-11 mb-5">About the camp</h2>
                 <p class="font-size-7 mb-0">
-                  We aspire to provide an engaging and interactive experience for motivated students who are interested in pursuing a STEM career. <br />We are very excited to welcome you to our in-person camp this summer!
+                  We aspire to provide an engaging and interactive experience for motivated students who are interested in
+                  pursuing a STEM career. <br />We are very excited to welcome you to our in-person camp this summer!
                 </p>
               </div>
             </div>
@@ -235,16 +236,116 @@
           <div class="col-xl-6 col-lg-7 col-md-7 col-xs-10">
             <div class="mx-lg-14 mx-xl-14" data-aos="fade-left" data-aos-duration="600" data-aos-once="true">
               <p class="heading-default-color font-size-6 mb-4 mb-lg-9">
-                This is the fifth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school students who are interested in pursuing a STEM career in the future, or want to explore different possible career options. We are very excited for this year’s iGEM camp because it’s the first in-person camp in two years. The past two had been online because of the pandemic. 
+                This is the fifth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school students
+                who are interested in pursuing a STEM career in the future, or want to explore different possible career options.
+                We are very excited for this year’s iGEM camp because it’s the first in-person camp in two years. The past two had
+                been online because of the pandemic.
               </p>
               <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                Our camp will teach many different important science topics such as biology, synthetic biology, chemistry, and forensics, as well as have daily labs that will reinforce what the students learned. The content we teach will not only prepare students for high school-level courses such as biology and chemistry, but it will also help their application should they wish to be a part of CCA’s iGEM team. 
-
+                Our camp will teach many different important science topics such as biology, synthetic biology, chemistry, and
+                forensics, as well as have daily labs that will reinforce what the students learned. The content we teach will not
+                only prepare students for high school-level courses such as biology and chemistry, but it will also help their
+                application should they wish to be a part of CCA’s iGEM team.
               </p>
             </div>
           </div>
           <!-- Left End -->
         </div>
+      </div>
+    </div>
+    <div class="pb-13 pb-md-18 pb-lg-25">
+      <div class="container">
+        <!-- Section Title -->
+        <div class="row justify-content-center">
+          <div class="col-xl-8 col-lg-9">
+            <div class="text-center mb-13 mb-lg-19">
+              <h2 class="font-size-9 mb-0">Logistics</h2>
+            </div>
+          </div>
+        </div>
+        <!-- End Section Title -->
+        <!-- Faqs -->
+        <!-- Faqs -->
+        <div class="row justify-content-center">
+          <!-- Single Faq -->
+          <div class="col-lg-6 col-md-10">
+            <div class="d-flex mb-10 mb-lg-17" data-aos="fade-up" data-aos-duration="300" data-aos-once="true">
+              <div class="mr-6">
+                <div class="bg-light-orange circle-28 text-white mt-1">
+                  <i class="fa fa-question"></i>
+                </div>
+              </div>
+              <div class="">
+                <h4 class="font-size-7 mb-7">When does the camp take place?</h4>
+                <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
+                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
+                  integration and processing projects. This role will work with stakeholders and other developers to design and
+                  implement technical data solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Single Faq -->
+          <!-- Single Faq -->
+          <div class="col-lg-6 col-md-10">
+            <div class="d-flex mb-10 mb-lg-17" data-aos="fade-up" data-aos-duration="600" data-aos-once="true">
+              <div class="mr-6">
+                <div class="bg-light-orange circle-28 text-white mt-1">
+                  <i class="fa fa-question"></i>
+                </div>
+              </div>
+              <div class="">
+                <h4 class="font-size-7 mb-7">Where will the camp be held?</h4>
+                <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
+                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
+                  integration and processing projects. This role will work with stakeholders and other developers to design and
+                  implement technical data solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Single Faq -->
+          <!-- Single Faq -->
+          <div class="col-lg-6 col-md-10">
+            <div class="d-flex mb-10 mb-lg-17" data-aos="fade-up" data-aos-duration="300" data-aos-once="true">
+              <div class="mr-6">
+                <div class="bg-light-orange circle-28 text-white mt-1">
+                  <i class="fa fa-question"></i>
+                </div>
+              </div>
+              <div class="">
+                <h4 class="font-size-7 mb-7">How much does it cost to attend?</h4>
+                <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
+                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
+                  integration and processing projects. This role will work with stakeholders and other developers to design and
+                  implement technical data solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Single Faq -->
+          <!-- Single Faq -->
+          <div class="col-lg-6 col-md-10">
+            <div class="d-flex mb-10 mb-lg-17" data-aos="fade-up" data-aos-duration="600" data-aos-once="true">
+              <div class="mr-6">
+                <div class="bg-light-orange circle-28 text-white mt-1">
+                  <i class="fa fa-question"></i>
+                </div>
+              </div>
+              <div class="">
+                <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
+                <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
+                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
+                  integration and processing projects. This role will work with stakeholders and other developers to design and
+                  implement technical data solutions.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- End Single Faq -->
+        </div>
+        <!-- Button  -->
+        <!-- Button End -->
       </div>
     </div>
 
