--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6861,6 +6861,15 @@ fieldset:disabled .btn {
 .my-lg-13 {
   margin-bottom: 3.125rem !important;
 }
+.mb-lg-17,
+.my-lg-17 {
+  margin-bottom: 4.375rem !important;
+}
+
+.mr-6,
+.mx-6 {
+  margin-right: 1rem !important;
+}
 
 .mr-lg-14,
 .mx-lg-14 {
@@ -6874,6 +6883,10 @@ fieldset:disabled .btn {
 .pb-lg-24,
 .py-lg-24 {
   padding-bottom: 6.875rem !important;
+}
+.pb-lg-25,
+.py-lg-25 {
+  padding-bottom: 7.5rem !important;
 }
 .pb-md-15,
 .py-md-15 {
@@ -7057,6 +7070,15 @@ fieldset:disabled .btn {
 .pe-5 {
   padding-right: 3rem !important;
 }
+.mb-7,
+.my-7 {
+  margin-bottom: 1.25rem !important;
+}
+.mb-10,
+.my-10 {
+  margin-bottom: 2.1875rem !important;
+}
+
 .mb-11,
 .my-11 {
   margin-bottom: 2.5rem !important;
@@ -7066,6 +7088,14 @@ fieldset:disabled .btn {
   margin-bottom: 6.875rem !important;
 }
 
+.pr-md-10,
+.px-md-10 {
+  padding-right: 2.1875rem !important;
+}
+.pr-lg-0,
+.px-lg-0 {
+  padding-right: 0 !important;
+}
 .pb-11,
 .py-11 {
   padding-bottom: 2.5rem !important;
@@ -16983,6 +17013,10 @@ fieldset:disabled .btn {
   font-size: 1rem !important;
 }
 
+.font-size-5 {
+  font-size: 1rem;
+  line-height: 1.75;
+}
 .font-size-6 {
   font-size: 1.125rem;
   line-height: 1.77777;
@@ -20025,4 +20059,19 @@ fieldset:disabled .btn {
 
 .z-index-n1 {
   z-index: -1;
+}
+
+.bg-light-orange {
+  background-color: #f77321 !important;
+}
+
+.circle-28 {
+  max-width: 28px;
+  min-width: 28px;
+  max-height: 28px;
+  min-height: 28px;
+  border-radius: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
