--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -278,9 +278,7 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">When does the camp take place?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
-                  integration and processing projects. This role will work with stakeholders and other developers to design and
-                  implement technical data solutions.
+                  We will be holding two sessions, one from June 13-17th, and one from August 1-5th. Daily times will be from 9 am to 2 pm, which includes a lunch and snack break.
                 </p>
               </div>
             </div>
@@ -297,9 +295,7 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">Where will the camp be held?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
-                  integration and processing projects. This role will work with stakeholders and other developers to design and
-                  implement technical data solutions.
+                  We expect this year's camp to be held in-person at Canyon Crest Academy, but due to the unpredictability of COVID, we cannot guarantee that the camp will be in-person. If we need to move to an online format, we will notify all parents and give a full refund for those who are unwilling to attend the camp online
                 </p>
               </div>
             </div>
@@ -316,9 +312,7 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">How much does it cost to attend?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
-                  integration and processing projects. This role will work with stakeholders and other developers to design and
-                  implement technical data solutions.
+                  $350 early bird, $400 after May 10th. Tuition will pay for the fun labs we prepare every day, as well as help us enroll in the iGEM competition in October. Tuition will not be refunded if our camp stays in-person. Camp attendees who refer the camp to other students will get a $20 discount off of their tuition, so please spread the word! 
                 </p>
               </div>
             </div>
@@ -335,9 +329,7 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  A Senior Data Engineer provides technical and delivery leadership for a team of developers working on data
-                  integration and processing projects. This role will work with stakeholders and other developers to design and
-                  implement technical data solutions.
+                  Lunch is not included in the original price, so students should bring their own lunches daily. For a price of $5 a day, we will provide lunch. It will most likely be common school lunches, such as pizza or sandwiches.
                 </p>
               </div>
             </div>
