--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -295,7 +295,7 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">Where will the camp be held?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  We expect this year's camp to be held in-person at Canyon Crest Academy, but due to the unpredictability of COVID, we cannot guarantee that the camp will be in-person. If we need to move to an online format, we will notify all parents and give a full refund for those who are unwilling to attend the camp online
+                  We expect this year's camp to be held in-person at Canyon Crest Academy, but due to the unpredictability of COVID, we cannot guarantee that the camp will be in-person. If we need to move to an online format, we will notify all parents and give a full refund for those who are unwilling to attend the camp online.
                 </p>
               </div>
             </div>
