rm: dropdown, fix: faq color

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -20062,7 +20062,7 @@ fieldset:disabled .btn {
 }
 
 .bg-light-orange {
-  background-color: #f77321 !important;
+  background-color: #14ee80 !important;
 }
 
 .circle-28 {
