--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -78,7 +78,7 @@
                   <div class="mobile-menu-close">&times;</div>
                 </div>
                 <ul class="site-menu-main">
-                  <li class="nav-item nav-item-has-children">
+                  <!-- <li class="nav-item nav-item-has-children">
                     <a href="#" class="nav-link-item drop-trigger">Dropdowns <i class="fas fa-angle-down"></i> </a>
                     <ul class="sub-menu" id="submenu-9">
                       <li class="sub-menu--item">
@@ -94,7 +94,7 @@
                         <a href="#">Dropdown 04</a>
                       </li>
                     </ul>
-                  </li>
+                  </li> -->
 
                   <li class="nav-item">
                     <a class="nav-link-item">Camp Information</a>
