--- a/views/about.html
+++ b/views/about.html
@@ -78,7 +78,7 @@
                   <div class="mobile-menu-close">&times;</div>
                 </div>
                 <ul class="site-menu-main">
-                  <li class="nav-item nav-item-has-children">
+                  <!-- <li class="nav-item nav-item-has-children">
                     <a href="#" class="nav-link-item drop-trigger">Dropdowns <i class="fas fa-angle-down"></i> </a>
                     <ul class="sub-menu" id="submenu-9">
                       <li class="sub-menu--item">
@@ -94,7 +94,7 @@
                         <a href="#">Dropdown 04</a>
                       </li>
                     </ul>
-                  </li>
+                  </li> -->
 
                   <li class="nav-item">
                     <a href="/views/camp-info.html" class="nav-link-item">Camp Information</a>
@@ -234,7 +234,25 @@
         </div>
       </div>
     </div>
-    
+    <!-- <div class="pb-11 pb-md-15 pb-lg-27">
+      <div class="container">
+        <div class="col-4">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
+          vitae aspernatur eius distinctio minus ab totam pariatur earum enim necessitatibus natus amet omnis consequuntur.
+          Veritatis reprehenderit neque aspernatur dolore explicabo doloremque suscipit?
+        </div>
+        <div class="col-4">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
+          vitae aspernatur eius distinctio minus ab totam pariatur earum enim necessitatibus natus amet omnis consequuntur.
+          Veritatis reprehenderit neque aspernatur dolore explicabo doloremque suscipit?
+        </div>
+        <div class="col-4">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
+          vitae aspernatur eius distinctio minus ab totam pariatur earum enim necessitatibus natus amet omnis consequuntur.
+          Veritatis reprehenderit neque aspernatur dolore explicabo doloremque suscipit?
+        </div>
+      </div>
+    </div> -->
     <!-- Footer Area -->
     <footer class="footer-area-l-12 position-relative">
       <div class="container">
