--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -109,7 +109,7 @@
               </nav>
             </div>
             <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
-              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://finestdevs.com/shade/">Get Started</a>
+              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://docs.google.com/forms/d/1S0Yvdufq8JCyBas6W0HmJXjTsdbe69OfWhyquYiT1Xk/edit">Get Started</a>
             </div>
             <!-- mobile menu trigger -->
             <div class="mobile-menu-trigger">
