--- a/views/about.html
+++ b/views/about.html
@@ -157,8 +157,7 @@
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
                 <h2 class="font-size-11 mb-5">About us</h2>
                 <p class="font-size-7 mb-0">
-                  Our focus is always on finding the best people to work with. Our bar is high, but you look ready to take on the
-                  challenge.
+                  We are a Synthetic Biology club based in Canyon Crest Academy. Read more about our accomplishments and why we are qualified to host this camp!
                 </p>
               </div>
             </div>
@@ -183,7 +182,7 @@
         <div class="row justify-content-center">
           <div class="col-xl-5 col-lg-6 col-sm-9">
             <div class="text-center mb-13 mb-lg-16" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
-              <h2 class="font-size-10 mb-0 letter-spacing-n83">Change the game through design</h2>
+              <h2 class="font-size-10 mb-0 letter-spacing-n83">About CCA iGEM</h2>
             </div>
           </div>
         </div>
