--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -278,7 +278,8 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">When does the camp take place?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  We will be holding two sessions, one from June 13-17th, and one from August 1-5th. Daily times will be from 9 am to 2 pm, which includes a lunch and snack break.
+                  We will be holding two sessions, one from June 13-17th, and one from August 1-5th. Daily times will be from 9 am
+                  to 2 pm, which includes a lunch and snack break.
                 </p>
               </div>
             </div>
@@ -295,7 +296,9 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">Where will the camp be held?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  We expect this year's camp to be held in-person at Canyon Crest Academy, but due to the unpredictability of COVID, we cannot guarantee that the camp will be in-person. If we need to move to an online format, we will notify all parents and give a full refund for those who are unwilling to attend the camp online.
+                  We expect this year's camp to be held in-person at Canyon Crest Academy, but due to the unpredictability of
+                  COVID, we cannot guarantee that the camp will be in-person. If we need to move to an online format, we will
+                  notify all parents and give a full refund for those who are unwilling to attend the camp online.
                 </p>
               </div>
             </div>
@@ -312,7 +315,10 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">How much does it cost to attend?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  $350 early bird, $400 after May 10th. Tuition will pay for the fun labs we prepare every day, as well as help us enroll in the iGEM competition in October. Tuition will not be refunded if our camp stays in-person. Camp attendees who refer the camp to other students will get a $20 discount off of their tuition, so please spread the word! 
+                  $350 early bird, $400 after May 10th. Tuition will pay for the fun labs we prepare every day, as well as help us
+                  enroll in the iGEM competition in October. Tuition will not be refunded if our camp stays in-person. Camp
+                  attendees who refer the camp to other students will get a $20 discount off of their tuition, so please spread
+                  the word!
                 </p>
               </div>
             </div>
@@ -329,7 +335,8 @@
               <div class="">
                 <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
                 <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                  Lunch is not included in the original price, so students should bring their own lunches daily. For a price of $5 a day, we will provide lunch. It will most likely be common school lunches, such as pizza or sandwiches.
+                  Lunch is not included in the original price, so students should bring their own lunches daily. For a price of $5
+                  a day, we will provide lunch. It will most likely be common school lunches, such as pizza or sandwiches.
                 </p>
               </div>
             </div>
@@ -338,6 +345,70 @@
         </div>
         <!-- Button  -->
         <!-- Button End -->
+      </div>
+    </div>
+    <div class="case-study-area-l3 inner-service-01">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8 col-lg-9">
+            <div class="text-center mb-13 mb-lg-19">
+              <h2 class="font-size-9 mb-0">Topics covered</h2>
+            </div>
+          </div>
+        </div>
+        <div class="row case-study-items-l3 justify-content-center">
+          <div class="col-lg-5 col-md-6">
+            <div class="image-content-box" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
+              <div class="case-study-area-image image-hover-style-01 overflow-hidden">
+                <img class="w-100" src="/image/masonry/unknown-2.png" alt="image" />
+              </div>
+              <div class="content">
+                <h4>Day One - Biology</h4>
+                <p>
+                  Lab: DNA Extraction                  
+                </p>
+              </div>
+            </div>
+            <div class="image-content-box" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
+              <div class="case-study-area-image image-hover-style-01 overflow-hidden">
+                <img class="w-100" src="/image/masonry/unknown-3.png" alt="image" />
+              </div>
+              <div class="content">
+                <h4>Days Two and Three - Synthetic Biology</h4>
+                <p>
+                  Lab: Bacterial Transformation with GFP
+                  
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="offset-lg-1 col-lg-6 col-md-6">
+            <div class="image-content-box" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
+              <div class="case-study-area-image image-hover-style-01 overflow-hidden">
+                <img class="w-100" src="/image/masonry/unknown-4.png" alt="image" />
+              </div>
+              <div class="content">
+                <h4>Day Four - Chemistry</h4>
+                <p>
+                  Lab: Reactions Lab (specifics TBD)
+                  
+                </p>
+              </div>
+            </div>
+            <div class="image-content-box" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000">
+              <div class="case-study-area-image image-hover-style-01 overflow-hidden">
+                <img class="w-100" src="/image/masonry/unknown-5.png" alt="image" />
+              </div>
+              <div class="content">
+                <h4>Day Five - Forensics</h4>
+                <p>
+                  Lab: Crime Scene Analysis Lab
+                  
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
