--- a/views/about.html
+++ b/views/about.html
@@ -223,9 +223,9 @@
                 and entrepreneurship.
               </p>
               <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                We focus a lot on our education, running the camp and writing a book about Biochemistry that we published to
-                Amazon, and last year, we won the Best Education award among all high school teams globally. We also received a
-                gold medal and were among the top 10 high school teams internationally.
+                We focus a lot on our education. Last year, we ran iGEM camp and wrote a book about Biochemistry that we published to
+                Amazon, which won us the Best Education award. We also received a
+                gold medal overall and were among the top 10 high school teams internationally.
               </p>
             </div>
           </div>
