--- a/views/about.html
+++ b/views/about.html
@@ -169,7 +169,7 @@
           <div class="row">
             <div class="col-12">
               <div class="rounded-8" data-aos="fade-up" data-aos-duration="800" data-aos-once="true">
-                <img class="w-100" src="/image/l4/career-banner-img.jpg" alt="" />
+                <img class="w-100" src="/image/l4/team.png" alt="" />
               </div>
             </div>
           </div>
